<resources>
    <string name="app_name">CATvsRAT</string>

    <string name="heart">❤</string>
    <string name="default_count">00000</string>
    <string name="start">Start</string>
    <string name="high_scores">High Scores</string>
    <string name="sensors"> Play with sensors</string>
    <string name="buttons"> Play with buttons</string>
    <string name="play_with_sensors">Play with sensors</string>
    <string name="play_with_buttons">Play with buttons</string>
    <string name="myp">-</string>
    <string name="home_page">Home page</string>
    <string name="restart">Restart</string>
    <string name="score">Score</string>
    <string name="high_score">High Score</string>
    <string name="game_over">Game Over</string>

    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Locations</string>
    <string name="close">x</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
</resources>